some fixes with sort